codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui2/src/chatwidget/tests.rs
expression: active_blob(&chat)
# tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
• Explored
  └ List ls -la
    Read foo.txt, bar.txt
