codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui2/src/chatwidget/tests.rs
expression: exec_blob
# tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__interrupt_exec_marks_failed.snap
---
• Ran sleep 1
  └ (no output)
